# simple-caffe-inference

./: .gitignore  CMakeLists.txt  README.md
cmake/: Cuda.cmake  Dependencies.cmake  Targets.cmake
include/caffe/: blob.hpp  caffe.hpp  common.hpp  data_transformer.hpp  filler.hpp  layer.hpp  layer_factory.hpp  net.hpp  syncedmem.hpp
include/caffe/layers/: base_conv_layer.hpp  batch_norm_layer.hpp  bias_layer.hpp  concat_layer.hpp  conv_layer.hpp  dropout_layer.hpp  eltwise_layer.hpp  inner_product_layer.hpp  input_layer.hpp  neuron_layer.hpp  pooling_layer.hpp  relu_layer.hpp  scale_layer.hpp  sigmoid_layer.hpp  softmax_layer.hpp  split_layer.hpp
include/caffe/util/: cudnn.hpp  device_alternate.hpp  im2col.hpp  insert_splits.hpp  io.hpp  math_functions.hpp  mkl_alternate.hpp  upgrade_proto.hpp
python/caffe/proto/: caffe_pb2.py
src/caffe/: CMakeLists.txt  blob.cpp  common.cpp  internal_thread.cpp  layer.cpp  layer_factory.cpp  net.cpp  syncedmem.cpp
src/caffe/layers/: base_conv_layer.cpp  batch_norm_layer.cpp  batch_norm_layer.cu  bias_layer.cpp  bias_layer.cu  center_loss_layer.cpp  center_loss_layer.cu  concat_layer.cpp  concat_layer.cu  conv_layer.cpp  conv_layer.cu  dropout_layer.cpp  dropout_layer.cu  eltwise_layer.cpp  eltwise_layer.cu  inner_product_layer.cpp  inner_product_layer.cu  input_layer.cpp  neuron_layer.cpp  pooling_layer.cpp  pooling_layer.cu  relu_layer.cpp  relu_layer.cu  scale_layer.cpp  scale_layer.cu  sigmoid_layer.cpp  sigmoid_layer.cu  softmax_layer.cpp  softmax_layer.cu  split_layer.cpp  split_layer.cu
tools/: caffe.cpp  caffe_gpu.cpp
(+12 files in other folders)
